@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                               settings.h                                */
-/* Original code written by Daniel Hawkins. Last modified on 2014-05-21.   */
+/* Original code written by Daniel Hawkins. Last modified on 2014-05-22.   */
 /*                                                                         */
 /* The file defines the structures for handling important variables.       */
 /*                                                                         */
@@ -10,18 +10,19 @@
 #ifndef SETTINGS_H
 #define SETTINGS_H
 
-struct exclude_dir{
-    char *excludeDir;
-    struct exclude_dir *next;
+struct dir_list{
+    char *dir;
+    struct dir_list *next;
 };
 
 struct {
-    struct exclude_dir *excluded_directories;
-    char *root_dir;
+    struct dir_list *excluded_directories;
+    struct dir_list *root_dirs;
 } settings;
 
 int init_settings();
 int free_settings();
 int add_exclude_dir(char *);
+int add_root_dir(char *);
 
 #endif
